--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - DB_HOST=mysql
       - DB_PORT=3306
       - DB_DATABASE=arknights
-      - DB_USERNAME=user
+      - DB_USERNAME=root
       - DB_PASSWORD=password
     command: php artisan serve --host=0.0.0.0 --port=8000
 
@@ -27,7 +27,7 @@ services:
       - "3306:3306"
     environment:
       - MYSQL_DATABASE=arknights
-      - MYSQL_USER=user
+      - MYSQL_USER=root
       - MYSQL_PASSWORD=password
       - MYSQL_ROOT_PASSWORD=root
     volumes:
