--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -27,15 +27,13 @@ services:
       - "3306:3306"
     environment:
       - MYSQL_DATABASE=arknights
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=password
-      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_ROOT_PASSWORD=password
     volumes:
       - mysql_data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: my_phpmyadmin
+    container_name: phpmyadmin
     ports:
       - "8080:80"
     environment:
